--- a/sourse/pug/blocks/sProductItem/_sProductItem.scss
+++ b/sourse/pug/blocks/sProductItem/_sProductItem.scss
@@ -4,32 +4,50 @@
 	// --sPB: ;
 	// --sTPB: ;
 	&__slider-wrap {
-		display: flex;
-	}
-	&__slider-thumbs {
-		background: #fff;
-    border: 1px solid #ddd;
-		.swiper-wrapper {
+		height: 100%;
+		margin-bottom: rem(10);
+		@include media-breakpoint-up(lg) {
 			display: flex;
-			flex-direction: column;
-		}
-		.swiper-slide {
-			height: auto;
+			align-items: flex-start;
+			flex-direction: row-reverse;
+			margin-bottom: 0;
 		}
 	}
-	&__slider {
+	&__slider-thumbs--js {
+		@include media-breakpoint-up(md) {
+		}
+		@include media-breakpoint-up(lg) {
+			height: 559px;
+			width: 15%;
+			margin-right: var(--bs-gutter-x);
+		}
+		img {
+			width: 100%;
+			height: 100%;
+		}
+	}
+	&__slider--js {
+		@include media-breakpoint-up(lg) {
+			height: 100%;
+			width: calc(85%  - var(--bs-gutter-x));
+		}
+		img {
+			width: 100%;
+			height: 100%;
+			object-fit: contain;
+		}
+	}
+	&__slider-thumbs, &__slider {
 		background: #fff;
     border: 1px solid #ddd;
-	}
-	&__img-wrap {
-		@include block(110, 110);
-		img {
-			position: absolute;
-			top: 0;
-			left: 0;
-			height: 100%;
-			width: 100%;
+		.swiper-slide {
+			display: flex;
+			align-items: center;
+			justify-content: center;
 		}
+	}
+	.swiper-slide-thumb-active {
+		border: 1px solid #ddd;
 	}
 	&__info-wrap {
 		background-color: $white;
