--- a/sourse/pug/blocks/top-nav/_top-nav.scss
+++ b/sourse/pug/blocks/top-nav/_top-nav.scss
@@ -6,6 +6,10 @@
 	z-index: 301;
 	.container{
 		position: relative;
+		@include media-breakpoint-down(md) {
+			display: none;
+		}
+
 	}
 
 	.menu-item {
@@ -19,6 +23,9 @@
 		max-width:rem(312);
 		@include media-breakpoint-down(xl) {
 			max-width:rem(200);
+		}
+		@include media-breakpoint-down(lg) {
+			display: none;
 		}
 	}
 	
@@ -75,6 +82,7 @@
 	height: 100%;
 	width: 100%;
 	font-weight: 700;
+	
 	&:hover {
 		background-color: $red;
 	}
