--- a/sourse/pug/blocks/topLine/_topLine.scss
+++ b/sourse/pug/blocks/topLine/_topLine.scss
@@ -12,7 +12,26 @@
 			border-top: 1px solid $gray;
 			border-bottom: 1px solid $gray;
 		}
-
+		.toggle-menu-mobile {
+			span {
+				width: rem(24);
+				height: 3px;
+				border-radius: 10px;
+				&::before {
+					top: 6px;
+					width: rem(24);
+					height: 3px;
+					border-radius: 10px;
+				}
+				&::after {
+					width: rem(24);
+					height: 3px;
+					bottom: 6px;
+					border-radius: 10px;
+				}
+			}
+		}
+	
 		&__logo {
 			@include media-breakpoint-down(md) {
 				margin-top: 81px;
