--- a/sourse/pug/blocks/sCompare/_sCompare.pug
+++ b/sourse/pug/blocks/sCompare/_sCompare.pug
@@ -5,14 +5,26 @@ mixin sCompare(data)
 			//- +breadcrumb('Главная', 'Сравнение товаров')
 			//- +b.section-title
 			//- 	h1 Сравнение товаров
+			+e.category-row
+				+e.category-item(href="#")
+					span.title Все
+					span.count 10
+				+e.category-item(href="#")
+					span.title Газонокосилки
+					span.count 10
 			+e.top-row.row.align-items-center
-				//- .col
-				//- 	+e.sub-title Товары
-				//- .col-auto
-				//- 	+e.clean-btn(href="#") Очистить список
+				.col
+					+e.show-btn
+						span Показывать:
+						a.active(href="#") Различающиеся характеристики
+						a(href="#") Все характеристики
+				.col-auto
+					+e.clean-btn(href="#")
+						+icon(`delete-btn`)
+						span Удалить список
 			+e.main-row.row
 				+e.col--chars.col-auto
-					//- +e.c-title Общая информация
+					+e.c-title Общая информация
 					+e.c-items
 						+e.c-item.c-item-js Макс. загрузка
 						+e.c-item.c-item-js Тип управления
@@ -21,7 +33,7 @@ mixin sCompare(data)
 						+e.c-item.c-item-js Класс отжима
 						+e.c-item.c-item-js Максимальная скорость отжима (об/мин)
 						+e.c-item.c-item-js Регулируемая скорость отжима (об/мин)
-					//- +e.c-title Функции и особенности
+					+e.c-title Функции и особенности
 					+e.c-items
 						+e.c-item.c-item-js Макс. загрузка
 						+e.c-item.c-item-js Тип управления
@@ -30,7 +42,7 @@ mixin sCompare(data)
 						+e.c-item.c-item-js Класс отжима
 						+e.c-item.c-item-js Максимальная скорость отжима (об/мин)
 						+e.c-item.c-item-js Регулируемая скорость отжима (об/мин)
-					//- +e.c-title Габариты
+					+e.c-title Габариты
 					+e.c-items
 						+e.c-item.c-item-js Макс. загрузка	
 						+e.c-item.c-item-js Тип управления
@@ -41,11 +53,11 @@ mixin sCompare(data)
 						+e.c-item.c-item-js Регулируемая скорость отжима (об/мин)
 				+e.col--slider.col
 					+e.main-slider
-						.swiper-container.sCompare-main-slider-js
+						.swiper.sCompare-main-slider-js
 							.swiper-wrapper
 								-for(var i=1; i <= 7; i++)
 									+sCompareMainSlide({})
-							//- .swiper-scrollbar
+							.swiper-scrollbar
 							//- +e.difference
 							//- 	+b.LABEL.custom-chb
 							//- 		input(type="checkbox" name='uniq' class="invisible" checked)
@@ -56,12 +68,12 @@ mixin sCompare(data)
 mixin sCompareMainSlide(data)
 	+e.main-slide.swiper-slide
 		+e.sub-slider
-			.swiper-container.sCompare-sub-slider-js
+			.swiper.sCompare-sub-slider-js
 				.swiper-wrapper
 					+sCompareSubSlide({
 						likeBtnClasses: '',
 						price: '54 999 руб.',
-						title: 'Вытяжка 60 см Bosch Serie | 4 DWK65AD60R',
+						title: 'Вытяжка 60 см Bosch Serie | 4 DWK65AD60R Вытяжка 60 см Bosch Serie | 4 DWK65AD60R Вытяжка 60 см Bosch Serie | 4 DWK65AD60R Вытяжка 60 см Bosch Serie | 4 DWK65AD60R',
 						slideNum: '1',
 					})
 					+sCompareSubSlide({
@@ -104,6 +116,17 @@ mixin sCompareMainSlide(data)
 mixin sCompareSubSlide(data)
 	.swiper-slide
 		+b.compare-card--js
+			+e.btns-block
+				+e.BUTTON.card-btn--favorite
+					svg.icon.replaced-svg(xmlns='http://www.w3.org/2000/svg' width='23' height='31' viewBox='0 0 23 31' fill='none')
+						path(d='M21.7895 0.5H0.724252C0.379095 0.5 0.100098 0.779621 0.100098 1.12415V29.8758C0.100098 30.1261 0.249271 30.3521 0.479584 30.4501C0.709897 30.5481 0.977035 30.4988 1.15679 30.3252L11.2569 20.5997L21.3569 30.3252C21.4749 30.4395 21.6309 30.5 21.7895 30.5C21.8719 30.5 21.9555 30.4838 22.0341 30.4501C22.2645 30.3521 22.4136 30.1255 22.4136 29.8758V1.12415C22.4136 0.779621 22.134 0.5 21.7895 0.5ZM21.1653 28.4085L11.6894 19.2839C11.5689 19.1672 11.4129 19.1092 11.2569 19.1092C11.1008 19.1092 10.9448 19.1672 10.8243 19.2839L1.34841 28.4085V1.74831H21.1653V28.4085Z' fill='#444444')
+				+e.BUTTON.card-btn--delete
+					svg.icon.replaced-svg(xmlns='http://www.w3.org/2000/svg' width='18' height='20' viewBox='0 0 18 20' fill='none')
+						path(d='M17.3382 2.87829H13.177V2.19984C13.177 0.986842 12.1902 0 10.9772 0H7.02159C5.80859 0 4.82175 0.986842 4.82175 2.19984V2.87829H0.660568C0.352179 2.87829 0.105469 3.125 0.105469 3.43339C0.105469 3.74178 0.352179 3.98849 0.660568 3.98849H1.66386V17.0312C1.66386 18.6678 2.99609 20 4.63261 20H13.3662C15.0027 20 16.3349 18.6678 16.3349 17.0312V3.98849H17.3382C17.6466 3.98849 17.8933 3.74178 17.8933 3.43339C17.8933 3.125 17.6466 2.87829 17.3382 2.87829ZM5.93195 2.19984C5.93195 1.59951 6.42126 1.1102 7.02159 1.1102H10.9772C11.5775 1.1102 12.0668 1.59951 12.0668 2.19984V2.87829H5.93195V2.19984ZM15.2247 17.0312C15.2247 18.0551 14.39 18.8898 13.3662 18.8898H4.63261C3.60876 18.8898 2.77405 18.0551 2.77405 17.0312V3.98849H15.2288V17.0312H15.2247Z' fill='#444444')
+						path(d='M9.00041 16.8997C9.30879 16.8997 9.5555 16.653 9.5555 16.3446V6.53374C9.5555 6.22535 9.30879 5.97864 9.00041 5.97864C8.69202 5.97864 8.44531 6.22535 8.44531 6.53374V16.3405C8.44531 16.6489 8.69202 16.8997 9.00041 16.8997Z' fill='#444444')
+						path(d='M5.37736 16.287C5.68575 16.287 5.93246 16.0403 5.93246 15.7319V7.14226C5.93246 6.83387 5.68575 6.58716 5.37736 6.58716C5.06898 6.58716 4.82227 6.83387 4.82227 7.14226V15.7319C4.82227 16.0403 5.07309 16.287 5.37736 16.287Z' fill='#444444')
+						path(d='M12.6225 16.287C12.9309 16.287 13.1776 16.0403 13.1776 15.7319V7.14226C13.1776 6.83387 12.9309 6.58716 12.6225 6.58716C12.3141 6.58716 12.0674 6.83387 12.0674 7.14226V15.7319C12.0674 16.0403 12.3141 16.287 12.6225 16.287Z' fill='#444444')
+
 			+e.content
 				//- +e.top-row.row.align-items-center.justify-content-end
 				//- 	.col-auto
@@ -121,14 +144,14 @@ mixin sCompareSubSlide(data)
 				//- 	.col-auto
 				//- 		+e.buy-btn(href="#")
 				//- 			span Купить
-			//- +e.controll-row.row.gx-0
-			//- 	.col-auto
-			//- 		+e.c-btn--prev.sub-slider-prev-js
-			//- 			+icon('chevron-left')
-			//- 	+e.number-col.col=`${data.slideNum} из 7`
-			//- 	.col-auto
-			//- 		+e.c-btn--next.sub-slider-next-js
-			//- 			+icon('chevron-right')
+			+e.controll-row.row.gx-0
+				.col-auto
+					+e.c-btn--prev.sub-slider-prev-js
+						+icon('chevron-left')
+				+e.number-col.col=`${data.slideNum} из 7`
+				.col-auto
+					+e.c-btn--next.sub-slider-next-js
+						+icon('chevron-right')
 		+e.slider-chars
 			+e.slide-char.slide-char-js 6 кг
 			+e.slide-char.slide-char-js электронное
