--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -47,6 +47,10 @@
 	font-size:math.div(16,10)*1rem;
 	width: math.div(20,16)*1em;
 }
+.icon-chevron-down {
+	font-size:math.div(7,10)*1rem;
+	width: math.div(12,7)*1em;
+}
 .icon-chevron-left {
 	font-size:math.div(8,10)*1rem;
 	width: math.div(5,8)*1em;
