--- a/sourse/pug/blocks/sForm/_sForm.scss
+++ b/sourse/pug/blocks/sForm/_sForm.scss
@@ -55,6 +55,12 @@
 		}
 		width: 100%;
 	}
+	.form-textarea{
+		height: 100%;
+		.form-control{
+			height: 100%;
+		}
+	}
 	@include media-breakpoint-up(xl) {
 	}
 	@include media-breakpoint-up(lg) {
