--- a/sourse/pug/pages/07-service-center-4.pug
+++ b/sourse/pug/pages/07-service-center-4.pug
@@ -26,9 +26,9 @@ block pagecontent
 	+page-head(title, 'Главная', 'Сервисный центр',title)
 	.container.page-container
 		.row
-			.col-lg-2
+			.col-xl-2.col-lg-3
 				+sidebar(`4`,`Сервис`,`Ремонт аэраторов, скарификаторов и вертикуттеров`,`Ремонт бензопил`,`Ремонт газонокосилок`,`Ремонт генераторов и электростанций`,`Ремонт измельчителей`,`Ремонт кусторезов`,`Ремонт минитракторов и райдеров`,`Ремонт мотопомп`,`Ремонт садовых опрыскивателей`,`Ремонт садовых пылесосов и воздуходувок`,`Ремонт снегоуборщиков`,`Ремонт триммеров`)
-			.col-lg-10
+			.col-xl-10.col-lg-9
 				.mainside
 					+sService4
 	+footer
