--- a/sourse/sass/_base.scss
+++ b/sourse/sass/_base.scss
@@ -484,6 +484,9 @@ iframe {
 	padding: rem(14);
 	height: 100%;
 	background-color: #ffffff;
+	@include media-breakpoint-down(lg){
+		// margin-bottom: rem(28);
+	}
 }
 .ymaps-2-1-79-gototech {
 	display: none !important;
