--- a/sourse/pug/blocks/sAccount/_sAccount.scss
+++ b/sourse/pug/blocks/sAccount/_sAccount.scss
@@ -18,8 +18,13 @@
 		@include media-breakpoint-up(lg) {
 			max-width: 40%;
 			width: 40%;
+			margin-bottom: 0;
 		}
 		width: 100%;
+		margin-bottom: rem(14);
+		&:last-child {
+			margin-bottom: 0;
+		}
 	}
 	&__title {
 		font-size: rem(18);
