--- a/sourse/pug/pages/04-contacts.pug
+++ b/sourse/pug/pages/04-contacts.pug
@@ -34,9 +34,9 @@ block pagecontent
 	+page-head(title, 'Главная', 'Контакты')
 	.container.page-container
 		.row
-			.col-lg-2
+			.col-xl-2.col-lg-3
 				+sidebar(``,`FAQ`,`Отзывы`)
-			.col-lg-10
+			.col-xl-10.col-lg-9
 				.mainside
 					+sContact
 					+sForm
