--- a/sourse/pug/pages/08-account-forget.pug
+++ b/sourse/pug/pages/08-account-forget.pug
@@ -32,7 +32,7 @@ block pagecontent
 	+top-nav()
 	//- +sMainCategories
 	+page-head(title, 'Главная', 'Авторизация')
-	.container
+	.container.page-container
 		.row
 			.col-lg-2
 				+sidebar(`1`,`Личные данные`,`Мои заказы`,`Выйти`)
