--- a/sourse/pug/pages/08-account-login.pug
+++ b/sourse/pug/pages/08-account-login.pug
@@ -32,11 +32,11 @@ block pagecontent
 	+top-nav()
 	//- +sMainCategories
 	+page-head(title, 'Главная', 'Авторизация')
-	.container
+	.container.page-container
 		.row
-			.col-lg-2
+			.col-xl-2.col-lg-3
 				+sidebar(`1`,`Личные данные`,`Мои заказы`,`Выйти`)
-			.col-lg-10
+			.col-xl-10.col-lg-9
 				.mainside
 					+sAccountLogin
 	+footer
