--- a/sourse/pug/pages/08-account-profile.pug
+++ b/sourse/pug/pages/08-account-profile.pug
@@ -34,9 +34,9 @@ block pagecontent
 	+page-head(title, 'Главная', 'Профиль пользователя')
 	.container.page-container
 		.row
-			.col-lg-2
+			.col-xl-2.col-lg-3
 				+sidebar(`1`,`Личные данные`,`Мои заказы`,`Выйти`)
-			.col-lg-10
+			.col-xl-10.col-lg-9
 				.mainside
 					+sAccountProfile
 	+footer
