--- a/sourse/pug/blocks/sCompare/_sCompare.scss
+++ b/sourse/pug/blocks/sCompare/_sCompare.scss
@@ -26,7 +26,7 @@
 		color: #444444;
 		border-radius: 5px;
 		margin-right: rem(14);
-		.count{
+		.count {
 			color: #ff3300;
 			margin-left: 5px;
 			font-size: 12px;
@@ -250,10 +250,11 @@
 			font-weight: 600;
 			text-overflow: ellipsis;
 			overflow: hidden;
-			line-clamp: 1;
-			display: -webkit-box;
-			// display: box;
-			word-wrap: break-word;
+			white-space: nowrap;
+			// line-clamp: 1;
+			// display: -webkit-box;
+			// // display: box;
+			// word-wrap: break-word;
 			box-orient: vertical;
 			//
 
@@ -356,7 +357,7 @@
 		margin-bottom: var(--c-item-mb);
 		font-size: var(--c-item-fs);
 		line-height: var(--c-item-lh);
-		color: $headings-color;
+		color: #7c7c7c;
 
 		@include media-breakpoint-down(lg) {
 			text-overflow: ellipsis;
