--- a/sourse/pug/blocks/sCatalogHead/_sCatalogHead.pug
+++ b/sourse/pug/blocks/sCatalogHead/_sCatalogHead.pug
@@ -9,9 +9,9 @@ mixin sCatalogHead(data)
 			.col
 				+b.select-group
 					+e.wrap
-						+select('', 'Сортировать:', 'Наименованию', 'Популярности', 'Отзывам', 'Рейтингу', 'Цена по возрастанию', 'Цена по убыванию')
+						+select('Сортировать:', 'Наименованию', 'Популярности', 'Отзывам', 'Рейтингу', 'Цена по возрастанию', 'Цена по убыванию')
 					+e.wrap
-						+select('', 'Сортировать:', 'Наименованию', 'Популярности', 'Отзывам', 'Рейтингу', 'Цена по возрастанию', 'Цена по убыванию')
+						+select('Сортировать:', 'Наименованию', 'Популярности', 'Отзывам', 'Рейтингу', 'Цена по возрастанию', 'Цена по убыванию')
 					+e.wrap
-						+select('', 'Сортировать:', 'Наименованию', 'Популярности', 'Отзывам', 'Рейтингу', 'Цена по возрастанию', 'Цена по убыванию')
+						+select('Сортировать:', 'Наименованию', 'Популярности', 'Отзывам', 'Рейтингу', 'Цена по возрастанию', 'Цена по убыванию')
 	// end sCatalogHead
