--- a/sourse/pug/blocks/sProductItem/_sProductItem.pug
+++ b/sourse/pug/blocks/sProductItem/_sProductItem.pug
@@ -8,17 +8,23 @@ mixin sProductItem(data)
 						+e.slider--js.swiper
 							.swiper-wrapper
 								.swiper-slide
-									+img('img/sProductItem-img-1.png')
+									a(href="img/sProductItem-img-1.png" data-fancybox='1')
+										+img('img/sProductItem-img-1.png')
 								.swiper-slide
-									+img('img/sProductItem-img-1.png')
+									a(href="img/sProductItem-img-1.png" data-fancybox='2')
+										+img('img/sProductItem-img-1.png')
 								.swiper-slide
-									+img('img/sProductItem-img-1.png')
+									a(href="img/sProductItem-img-1.png" data-fancybox='3')
+										+img('img/sProductItem-img-1.png')
 								.swiper-slide
-									+img('img/sProductItem-img-1.png')
+									a(href="img/sProductItem-img-1.png" data-fancybox='4')
+										+img('img/sProductItem-img-1.png')
 								.swiper-slide
-									+img('img/sProductItem-img-1.png')
+									a(href="img/sProductItem-img-1.png" data-fancybox='5')
+										+img('img/sProductItem-img-1.png')
 								.swiper-slide
-									+img('img/sProductItem-img-1.png')
+									a(href="img/sProductItem-img-1.png" data-fancybox='6')
+										+img('img/sProductItem-img-1.png')
 						+e.slider-thumbs--js.swiper
 							.swiper-wrapper
 								.swiper-slide
