--- a/sourse/pug/pages/02-catalog.pug
+++ b/sourse/pug/pages/02-catalog.pug
@@ -44,7 +44,7 @@ block pagecontent
 				+sCatalogBody()
 	+sProductDesc
 	+sMainCategories
-	+sAllCategories
+	+sAllCategories2
 	+footer()
       
 
