--- a/sourse/pug/blocks/sAllCategories/_sAllCategories.scss
+++ b/sourse/pug/blocks/sAllCategories/_sAllCategories.scss
@@ -50,12 +50,17 @@
 		font-weight: 700;
 		transition: background-color .3 ease-in-out;
 		padding: rem(22) 0;
+		box-shadow: -15px 0 $body-color;
+		z-index: 1;
+    position: relative;
 		&:hover {
 				background-color: #A8C828;
+				box-shadow: -15px 0 #A8C828;
 			}
 		&.active {
 			// width: 100%;
 			// margin-top: rem(10);
+			box-shadow: none;
 		}
 	}
 
