--- a/sourse/pug/blocks/sFilter/_sFilter.scss
+++ b/sourse/pug/blocks/sFilter/_sFilter.scss
@@ -19,6 +19,8 @@
 	}
 	&.active {
 		transform: translateX(0);
+		overflow-y: auto;
+    overflow-x: hidden;
 		.sFilter__headline {
 			&::after {
 				content: '';
@@ -140,6 +142,7 @@
 		margin-bottom: rem(5);
 		&__input {
 			width: rem(28);
+			min-width: rem(28);
 			height: rem(28);
 			margin-left: rem(-30);
 		}
