--- a/sourse/pug/blocks/footer/_footer.pug
+++ b/sourse/pug/blocks/footer/_footer.pug
@@ -21,7 +21,7 @@ mixin footer()
 							a(href="#") Отзывы
 						li 
 							a(href="#") Вопросы и ответы
-				.col.col-lg-4.col-xl-3
+				+e.contacts.col.col-lg-4.col-xl-3
 					+e.title Контакты
 					address 
 						p г. Москва, Дмитровское шоссе 62с5 
