--- a/sourse/pug/blocks/sCommunications/_sCommunications.pug
+++ b/sourse/pug/blocks/sCommunications/_sCommunications.pug
@@ -14,9 +14,9 @@ mixin sCommunications(data)
 				.col-md-6.col-xl
 					+form-wrap()
 						.row
-							.col
+							.col-lg
 								+input('Введите свой e-mail')
-							.col-auto
+							.col-lg-auto
 								+btn('Подписаться','button')
 						+policy()
 
