--- a/sourse/pug/blocks/modal/_modal.scss
+++ b/sourse/pug/blocks/modal/_modal.scss
@@ -107,9 +107,12 @@
 	&__img-wrap {
 		padding: 2px;
 		max-width: 20%;
-		img {
-			max-width: 100%;
-		}
+		// img {
+		// 	max-width: 100%;
+		// }
+	}
+	&__name {
+		padding: 5px;
 	}
 	&__name a {
 		padding: 2px;
