--- a/sourse/pug/blocks/sBlog/_sBlog.scss
+++ b/sourse/pug/blocks/sBlog/_sBlog.scss
@@ -12,6 +12,13 @@
 	}
 	.blog-item {
 		height: 400px;
+		@include mt;
+		// @media (max-width: 576px) {
+		// 	width: 50%;
+		// }
+		// @media (max-width: 440px) {
+		// 	width: 100%;
+		// }
 	}
 
 	button {
