--- a/sourse/pug/blocks/sBlogPreview/_sBlogPreview.scss
+++ b/sourse/pug/blocks/sBlogPreview/_sBlogPreview.scss
@@ -15,7 +15,10 @@
 	}
 
 	.row {
-		--bs-gutter-y: #{$grid-gutter-width}
+		--bs-gutter-y: #{$grid-gutter-width};
+		@include media-breakpoint-down(sm) {
+			--bs-gutter-y: 20px;
+		}
 	}
 
 	@include media-breakpoint-up(xl) {}
@@ -25,7 +28,8 @@
 	@include media-breakpoint-between(md, xl) {}
 	@include media-breakpoint-only(xl) {}
 	@include media-breakpoint-down(xl) {}
-} // end.sBlogPreview
+}
+ // end.sBlogPreview
 
 .blog-item {
 	position: relative;
@@ -33,11 +37,21 @@
 	flex-direction: column;
 	height: 100%;
 	background-color: $white;
+	// @include media-breakpoint-down(sm) {
+	// 	margin-bottom: rem(20);
+	// }
 	&:hover {
 		box-shadow: 0 0 1rem rgb(68 68 68 / 50%);
 	}
+	&__img-wrap {
+		@include block(210,168)
+	}
 	img {
+		position: absolute;
+		top: 0;
+		left: 0;
 		width: 100%;
+		max-width: 100%;
 	}
 	&__caption {
 		padding: $grid-gutter-width;
