--- a/sourse/pug/blocks/sCommunications/_sCommunications.scss
+++ b/sourse/pug/blocks/sCommunications/_sCommunications.scss
@@ -31,6 +31,10 @@
 			color: $white;
 			background-color: $body-color;
 			transition: background-color .3s ease-in-out;
+			@include media-breakpoint-down(lg) {
+				width: 100%;
+				margin-top: -10px;
+			}
 			&:hover {
 				background-color: $red;
 			}
