--- a/sourse/pug/blocks/sMainCategories/_sMainCategories.scss
+++ b/sourse/pug/blocks/sMainCategories/_sMainCategories.scss
@@ -1,28 +1,29 @@
 // start .sMainCategories
 .sMainCategories {
-		--sPT: 0;
-		--sPB: $grid-gutter-width;
-		// --sTPB: ;
+	--sPT: 0;
+	--sPB: $grid-gutter-width;
+	// --sTPB: ;
 	&__list {
 		display: flex;
 		list-style-type: none;
 	}
-
-	.sliderAutoWidth {		
-		padding: 10px 10px 0 10px;
-		height: 190px;
+	
+	.sliderAutoWidth {
+		margin: -10px;
+    padding: 20px;
+		margin-left: -20px;
 	}
-
 	.swiper-slide {
 		height: 170px;
-		max-width: 146px;
+		max-width: 132px;
 		margin-right: $grid-gutter-width;
 	}
-
+	
 	.main-cat-item {
-		position: relative;
 		display: flex;
 		flex-direction: column;
+		align-items: center;
+		justify-content: center;
 		height: 100%;
 		background-color: $white;
 		padding: 10px;
@@ -32,9 +33,23 @@
 		&:not(:last-child) {
 			margin-right: 10px;
 		}	
+		&__text {
+			display: flex;
+			// max-width: 132px;
+			height: 50px;
+			margin-top: rem(10);
+			align-items:center;
+			justify-content: center;
+			// margin-top: auto;
+			text-align: center;
+			font-size: 13.5px;
+			font-weight: 700;
+			color: $blue;
+			transition: color .3s ease-in-out, text-decoration .3s ease-in-out;
+		}
 		&:hover {
 			transform: scale(1.1);
-			box-shadow: 0 0 1rem rgb(68 68 68 / 50%);
+			box-shadow: 0 0 10px rgb(68 68 68 / 50%);
 			.main-cat-item__text {
 				color: $red;
 				text-decoration: underline;
@@ -42,29 +57,24 @@
 		}
 		&__img-wrap {
 			display: flex;
+			flex-direction: column;
 			align-items: center;
 			justify-content: center;
-			min-height: 90px;
+			height: 90px;
+   		 max-width: 90px;
 		}
 		img {
-			max-height: 85px;
-			width: auto;
+			max-width: 100%;
+			max-height: 100%;
+			height: auto;
+			width: auto !important;
+			vertical-align: top;
 		}
-		&__text {
-			display: flex;
-			height: 100%;
-			align-items:center;
-			justify-content: center;
-			font-size: 14px;
-			text-align: center;
-			font-weight: 700;
-			color: $blue;
-			transition: color .3s ease-in-out, text-decoration .3s ease-in-out;
-		}
-		p {			
-			margin: 0;
-			padding: 0;
-		}
+	// 	p {			
+	// 		margin: 0;
+	// 		padding: 0;
+	// 	}
+	// }
 	}
 	
 
