--- a/sourse/pug/blocks/sAllCategories/_sAllCategories.pug
+++ b/sourse/pug/blocks/sAllCategories/_sAllCategories.pug
@@ -4,7 +4,7 @@ mixin allCategoriesItem(name)
 
 mixin sAllCategories(data)
 	// start sAllCategories
-	+b.SECTION.sAllCategories.section#sAllCategories&attributes(attributes)
+	+b.sAllCategories.section#sAllCategories&attributes(attributes)
 		+e.container.container.sliderAutoWidthWrap
 			.row
 				+e.col-slider.col-12.col-sm-10
@@ -34,7 +34,7 @@ mixin sAllCategories(data)
 
 mixin sAllCategories2(data)
 	// start sAllCategories
-	+b.SECTION.sAllCategories.section#sAllCategories&attributes(attributes)
+	+b.sAllCategories.section&attributes(attributes)
 		+e.container.container.sliderAutoWidthWrap
 			.row
 				+e.col-slider.col-12.col-sm-10
