--- a/sourse/pug/blocks/sMainCategories/_sMainCategories.pug
+++ b/sourse/pug/blocks/sMainCategories/_sMainCategories.pug
@@ -6,7 +6,7 @@ mixin categoryItem(i,t)
 
 mixin sMainCategories(data)
 	// start sMainCategories
-	+b.SECTION.sMainCategories.section#sMainCategories&attributes(attributes)
+	+b.sMainCategories.section#sMainCategories&attributes(attributes)
 		.container.sliderAutoWidthWrap.d-none.d-md-block
 			+b.sliderAutoWidth--js.swiper
 				.swiper-wrapper
