--- a/sourse/pug/blocks/sProductItem/_sProductItem.pug
+++ b/sourse/pug/blocks/sProductItem/_sProductItem.pug
@@ -1,6 +1,6 @@
 mixin sProductItem(data)
 	// start sProductItem
-	+b.SECTION.sProductItem.section#sProductItem&attributes(attributes)
+	+b.sProductItem.section#sProductItem&attributes(attributes)
 		.container
 			.row
 				.col-12.col-lg-6
