--- a/sourse/pug/blocks/modal/_modal.pug
+++ b/sourse/pug/blocks/modal/_modal.pug
@@ -14,7 +14,7 @@ mixin modal()
 			+form-wrap
 				+e.title.form-data.h3 Быстрый заказ
 				+input(``,'text','ФИО: ')(required)
-				+input(``,'number','Телефон: ')(required type='tel')
+				+input(``,'tel','Телефон: ')(required)
 				+e.BUTTON.btn.btn-main(type="submit") Купить
 
 	div(id="added-to-cart"  style="display: none" )
