--- a/sourse/pug/blocks/sCatalogBody/_sCatalogBody.pug
+++ b/sourse/pug/blocks/sCatalogBody/_sCatalogBody.pug
@@ -3,40 +3,40 @@ mixin sCatalogBody(data)
 	+b.sCatalogBody#sCatalogBody&attributes(attributes)
 		+e.row.row
 			+e.col-card.col-12.col-md-6.col-lg-4.col-xxl-auto
-				+productCard('1', '5004754', 'Комплект аккумуляторная цепная пила Husqvarna 120i 9670982-01 + Аккумулятор Husqvarna BLi200 9670919-01 + Зарядное устройство Husqvarna QC 330 9670914-01', '33 589 руб.', 'aval')
+				+productCard('1', '5004754', 'Комплект аккумуляторная цепная пила Husqvarna 120i 9670982-01 + Аккумулятор Husqvarna BLi200 9670919-01 + Зарядное устройство Husqvarna QC 330 9670914-01', '33 589 руб.', 'aval', 'info')
 			+e.col-card.col-12.col-md-6.col-lg-4.col-xxl-auto
-				+productCard('1', '5004754', 'Комплект аккумуляторная цепная пила Husqvarna 120i 9670982-01 + Аккумулятор Husqvarna BLi200 9670919-01 + Зарядное устройство Husqvarna QC 330 9670914-01', '33 589 руб.', 'aval')
+				+productCard('1', '5004754', 'Комплект аккумуляторная цепная пила Husqvarna 120i 9670982-01 + Аккумулятор Husqvarna BLi200 9670919-01 + Зарядное устройство Husqvarna QC 330 9670914-01', '33 589 руб.', 'aval', 'info')
 			+e.col-card.col-12.col-md-6.col-lg-4.col-xxl-auto
-				+productCard('1', '5004754', 'Комплект аккумуляторная цепная пила Husqvarna 120i 9670982-01 + Аккумулятор Husqvarna BLi200 9670919-01 + Зарядное устройство Husqvarna QC 330 9670914-01', '33 589 руб.', 'aval')
+				+productCard('1', '5004754', 'Комплект аккумуляторная цепная пила Husqvarna 120i 9670982-01 + Аккумулятор Husqvarna BLi200 9670919-01 + Зарядное устройство Husqvarna QC 330 9670914-01', '33 589 руб.', 'aval', 'info')
 			+e.col-card.col-12.col-md-6.col-lg-4.col-xxl-auto
-				+productCard('1', '5004754', 'Комплект аккумуляторная цепная пила Husqvarna 120i 9670982-01 + Аккумулятор Husqvarna BLi200 9670919-01 + Зарядное устройство Husqvarna QC 330 9670914-01', '33 589 руб.', 'aval')
+				+productCard('1', '5004754', 'Комплект аккумуляторная цепная пила Husqvarna 120i 9670982-01 + Аккумулятор Husqvarna BLi200 9670919-01 + Зарядное устройство Husqvarna QC 330 9670914-01', '33 589 руб.', 'aval', 'info')
 			+e.col-card.col-12.col-md-6.col-lg-4.col-xxl-auto
-				+productCard('1', '5004754', 'Комплект аккумуляторная цепная пила Husqvarna 120i 9670982-01 + Аккумулятор Husqvarna BLi200 9670919-01 + Зарядное устройство Husqvarna QC 330 9670914-01', '33 589 руб.', 'aval')
+				+productCard('1', '5004754', 'Комплект аккумуляторная цепная пила Husqvarna 120i 9670982-01 + Аккумулятор Husqvarna BLi200 9670919-01 + Зарядное устройство Husqvarna QC 330 9670914-01', '33 589 руб.', 'aval', 'info')
 			+e.col-card.col-12.col-md-6.col-lg-4.col-xxl-auto
-				+productCard('1', '5004754', 'Комплект аккумуляторная цепная пила Husqvarna 120i 9670982-01 + Аккумулятор Husqvarna BLi200 9670919-01 + Зарядное устройство Husqvarna QC 330 9670914-01', '33 589 руб.', 'aval')
+				+productCard('1', '5004754', 'Комплект аккумуляторная цепная пила Husqvarna 120i 9670982-01 + Аккумулятор Husqvarna BLi200 9670919-01 + Зарядное устройство Husqvarna QC 330 9670914-01', '33 589 руб.', 'aval', 'info')
 			+e.col-card.col-12.col-md-6.col-lg-4.col-xxl-auto
-				+productCard('1', '5004754', 'Комплект аккумуляторная цепная пила Husqvarna 120i 9670982-01 + Аккумулятор Husqvarna BLi200 9670919-01 + Зарядное устройство Husqvarna QC 330 9670914-01', '33 589 руб.', 'aval')
+				+productCard('1', '5004754', 'Комплект аккумуляторная цепная пила Husqvarna 120i 9670982-01 + Аккумулятор Husqvarna BLi200 9670919-01 + Зарядное устройство Husqvarna QC 330 9670914-01', '33 589 руб.', 'aval', 'info')
 			+e.col-card.col-12.col-md-6.col-lg-4.col-xxl-auto
-				+productCard('1', '5004754', 'Комплект аккумуляторная цепная пила Husqvarna 120i 9670982-01 + Аккумулятор Husqvarna BLi200 9670919-01 + Зарядное устройство Husqvarna QC 330 9670914-01', '33 589 руб.', 'aval')
+				+productCard('1', '5004754', 'Комплект аккумуляторная цепная пила Husqvarna 120i 9670982-01 + Аккумулятор Husqvarna BLi200 9670919-01 + Зарядное устройство Husqvarna QC 330 9670914-01', '33 589 руб.', 'aval', 'info')
 			+e.col-card.col-12.col-md-6.col-lg-4.col-xxl-auto
-				+productCard('1', '5004754', 'Комплект аккумуляторная цепная пила Husqvarna 120i 9670982-01 + Аккумулятор Husqvarna BLi200 9670919-01 + Зарядное устройство Husqvarna QC 330 9670914-01', '33 589 руб.', 'aval')
+				+productCard('1', '5004754', 'Комплект аккумуляторная цепная пила Husqvarna 120i 9670982-01 + Аккумулятор Husqvarna BLi200 9670919-01 + Зарядное устройство Husqvarna QC 330 9670914-01', '33 589 руб.', 'aval', 'info')
 			+e.col-card.col-12.col-md-6.col-lg-4.col-xxl-auto
-				+productCard('1', '5004754', 'Комплект аккумуляторная цепная пила Husqvarna 120i 9670982-01 + Аккумулятор Husqvarna BLi200 9670919-01 + Зарядное устройство Husqvarna QC 330 9670914-01', '33 589 руб.', 'aval')
+				+productCard('1', '5004754', 'Комплект аккумуляторная цепная пила Husqvarna 120i 9670982-01 + Аккумулятор Husqvarna BLi200 9670919-01 + Зарядное устройство Husqvarna QC 330 9670914-01', '33 589 руб.', 'aval', 'info')
 			+e.col-card.col-12.col-md-6.col-lg-4.col-xxl-auto
-				+productCard('1', '5004754', 'Комплект аккумуляторная цепная пила Husqvarna 120i 9670982-01 + Аккумулятор Husqvarna BLi200 9670919-01 + Зарядное устройство Husqvarna QC 330 9670914-01', '33 589 руб.', 'aval')
+				+productCard('1', '5004754', 'Комплект аккумуляторная цепная пила Husqvarna 120i 9670982-01 + Аккумулятор Husqvarna BLi200 9670919-01 + Зарядное устройство Husqvarna QC 330 9670914-01', '33 589 руб.', 'aval', 'info')
 			+e.col-card.col-12.col-md-6.col-lg-4.col-xxl-auto
-				+productCard('1', '5004754', 'Комплект аккумуляторная цепная пила Husqvarna 120i 9670982-01 + Аккумулятор Husqvarna BLi200 9670919-01 + Зарядное устройство Husqvarna QC 330 9670914-01', '33 589 руб.', 'aval')
+				+productCard('1', '5004754', 'Комплект аккумуляторная цепная пила Husqvarna 120i 9670982-01 + Аккумулятор Husqvarna BLi200 9670919-01 + Зарядное устройство Husqvarna QC 330 9670914-01', '33 589 руб.', 'aval', 'info')
 			+e.col-card.col-12.col-md-6.col-lg-4.col-xxl-auto
-				+productCard('1', '5004754', 'Комплект аккумуляторная цепная пила Husqvarna 120i 9670982-01 + Аккумулятор Husqvarna BLi200 9670919-01 + Зарядное устройство Husqvarna QC 330 9670914-01', '33 589 руб.', 'aval')
+				+productCard('1', '5004754', 'Комплект аккумуляторная цепная пила Husqvarna 120i 9670982-01 + Аккумулятор Husqvarna BLi200 9670919-01 + Зарядное устройство Husqvarna QC 330 9670914-01', '33 589 руб.', 'aval', 'info')
 			+e.col-card.col-12.col-md-6.col-lg-4.col-xxl-auto
-				+productCard('1', '5004754', 'Комплект аккумуляторная цепная пила Husqvarna 120i 9670982-01 + Аккумулятор Husqvarna BLi200 9670919-01 + Зарядное устройство Husqvarna QC 330 9670914-01', '33 589 руб.', 'aval')
+				+productCard('1', '5004754', 'Комплект аккумуляторная цепная пила Husqvarna 120i 9670982-01 + Аккумулятор Husqvarna BLi200 9670919-01 + Зарядное устройство Husqvarna QC 330 9670914-01', '33 589 руб.', 'aval', 'info')
 			+e.col-card.col-12.col-md-6.col-lg-4.col-xxl-auto
-				+productCard('1', '5004754', 'Комплект аккумуляторная цепная пила Husqvarna 120i 9670982-01 + Аккумулятор Husqvarna BLi200 9670919-01 + Зарядное устройство Husqvarna QC 330 9670914-01', '33 589 руб.', 'aval')
+				+productCard('1', '5004754', 'Комплект аккумуляторная цепная пила Husqvarna 120i 9670982-01 + Аккумулятор Husqvarna BLi200 9670919-01 + Зарядное устройство Husqvarna QC 330 9670914-01', '33 589 руб.', 'aval', 'info')
 			+e.col-card.col-12.col-md-6.col-lg-4.col-xxl-auto
-				+productCard('1', '5004754', 'Комплект аккумуляторная цепная пила Husqvarna 120i 9670982-01 + Аккумулятор Husqvarna BLi200 9670919-01 + Зарядное устройство Husqvarna QC 330 9670914-01', '33 589 руб.', 'aval')
+				+productCard('1', '5004754', 'Комплект аккумуляторная цепная пила Husqvarna 120i 9670982-01 + Аккумулятор Husqvarna BLi200 9670919-01 + Зарядное устройство Husqvarna QC 330 9670914-01', '33 589 руб.', 'aval', 'info')
 			+e.col-card.col-12.col-md-6.col-lg-4.col-xxl-auto
-				+productCard('1', '5004754', 'Комплект аккумуляторная цепная пила Husqvarna 120i 9670982-01 + Аккумулятор Husqvarna BLi200 9670919-01 + Зарядное устройство Husqvarna QC 330 9670914-01', '33 589 руб.', 'aval')
+				+productCard('1', '5004754', 'Комплект аккумуляторная цепная пила Husqvarna 120i 9670982-01 + Аккумулятор Husqvarna BLi200 9670919-01 + Зарядное устройство Husqvarna QC 330 9670914-01', '33 589 руб.', 'aval', 'info')
 			+e.col-card.col-12.col-md-6.col-lg-4.col-xxl-auto
-				+productCard('1', '5004754', 'Комплект аккумуляторная цепная пила Husqvarna 120i 9670982-01 + Аккумулятор Husqvarna BLi200 9670919-01 + Зарядное устройство Husqvarna QC 330 9670914-01', '33 589 руб.', 'aval')
+				+productCard('1', '5004754', 'Комплект аккумуляторная цепная пила Husqvarna 120i 9670982-01 + Аккумулятор Husqvarna BLi200 9670919-01 + Зарядное устройство Husqvarna QC 330 9670914-01', '33 589 руб.', 'aval', 'info')
 		+pugin()
 	// end sCatalogBody
