--- a/sourse/pug/blocks/sProductItem/_sProductItem.scss
+++ b/sourse/pug/blocks/sProductItem/_sProductItem.scss
@@ -14,10 +14,9 @@
 		}
 	}
 	&__slider-thumbs--js {
-		@include media-breakpoint-up(md) {
-		}
 		@include media-breakpoint-up(lg) {
-			height: 559px;
+			height: 100%;
+			max-height: 559px;
 			width: 35%;
 			margin-right: var(--bs-gutter-x);
 		}
@@ -25,10 +24,19 @@
 			width: 100%;
 			height: 100%;
 		}
+		.swiper-slide {
+			@include mt;
+			border: 1px solid transparent;
+			&-thumb-active, &:hover {
+				border-color:#ddd;
+			}
+			
+		}
 	}
 	&__slider--js {
 		@include media-breakpoint-up(lg) {
 			height: 100%;
+			max-height: 559px;
 			width: calc(85%  - var(--bs-gutter-x));
 		}
 		img {
@@ -45,9 +53,6 @@
 			align-items: center;
 			justify-content: center;
 		}
-	}
-	.swiper-slide-thumb-active {
-		border: 1px solid #ddd;
 	}
 	&__info-wrap {
 		background-color: $white;
