--- a/sourse/pug/blocks/topLine/_topLine.pug
+++ b/sourse/pug/blocks/topLine/_topLine.pug
@@ -17,7 +17,7 @@ mixin topLine()
 						.col-auto.d-lg-none
 									+menu-toggle()
 						.col-auto
-							+e.BUTTON.location
+							+e.location
 								+icon('geo')
 								.topLine__location-text
 									p <span>Москва</span>Выбрать другой город
