--- a/sourse/pug/blocks/sBasket/_sBasket.pug
+++ b/sourse/pug/blocks/sBasket/_sBasket.pug
@@ -31,7 +31,7 @@ mixin sBasket(data)
 				tbody
 					+basketItem('1','Штыковая укороченная лопата FISKARS SolidTM 1026667', '1026667', '0', '850')
 					+basketItem('2','Аккумуляторная газонокосилка PATRIOT РТ 330 Li', '512300330', '0', '12290')
-				thead.table-dark
+				tfoot.table-dark
 					tr
 						th(colspan="3").text-end Итого
 						th 2 шт.
