--- a/sourse/pug/blocks/sBasket/_sBasket.scss
+++ b/sourse/pug/blocks/sBasket/_sBasket.scss
@@ -9,19 +9,29 @@
 	th {
 		text-align: center;
 	}
-	thead {
+	tfoot {
 		@include media-breakpoint-down(md) {
 			display: block;
 		}
+		// @include media-breakpoint-down(sm) {
+		// 	display: flex;
+		// }
 		tr {
 			@include media-breakpoint-down(md) {
 				display: flex;
+				justify-content: space-between;
+				background-color: #222;
 			}
 		}
 		th {
-			@include media-breakpoint-down(md) {
-				width: 100%;
+			&:last-child {
+				@include media-breakpoint-down(md) {
+					display: none;
+				}				
 			}
+			// @include media-breakpoint-down(md) {
+			// 	width: 25%;
+			// }
 		}
 	}
 	.header-top {
@@ -33,6 +43,7 @@
 	img {
 		max-height: 150px;
 		object-fit: contain;
+		max-width: 100%;
 	}
 	tbody {
 		background-color:$white;
@@ -40,28 +51,30 @@
 
 	tbody tr {
 		@include media-breakpoint-down(md) {
+			display: flex;
+			flex-wrap: wrap;
+			align-items: center;
 			border-bottom: 1px solid #dddddd;
-			display: block;
 			&:not(:last-child) {
 				margin-bottom: rem(20);
 			}
 		}
 	}
 	
-	td {
-		@include media-breakpoint-down(md) {
-			display: block;
-			width: 100%;
-		}
-		&:before {
-			@include media-breakpoint-down(md){
-				content: attr(data-label);
-				float: left;
-				text-transform: uppercase;
-				font-weight: bold;
-			}
-		}
-	}
+	// td {
+	// 	@include media-breakpoint-down(md) {
+	// 		display: block;
+	// 		width: 100%;
+	// 	}
+	// 	&:before {
+	// 		@include media-breakpoint-down(md){
+	// 			content: attr(data-label);
+	// 			float: left;
+	// 			text-transform: uppercase;
+	// 			font-weight: bold;
+	// 		}
+	// 	}
+	// }
 
 
 	.icon-close {
@@ -118,9 +131,17 @@
 		padding: $grid-gutter-width;
 		width: 15%;
 		text-align: center;
+		@include media-breakpoint-down(md) {
+			width: 40%;
+			order: -3
+		}
 	}
 	&__title {
 		width: 25%;
+		@include media-breakpoint-down(md) {
+			width: 40%;
+			order: -2
+		}
 	}
 	&__name {
 		color: $body-color;
@@ -134,7 +155,26 @@
 	&__count, &__number,&__weight,&__price,&__delete {
 		width: 12%;
 		text-align: center;
+		// @include media-breakpoint-down(md) {
+		// 	display: inline-block;
+		// 	width: 50%;
+		// }
 	}
+	&__count, &__number,&__weight,&__price {
+		@include media-breakpoint-down(md) {
+			width: 25%;
+		}
+		@include media-breakpoint-down(sm) {
+			width: 50%;
+		}
+	}
+	&__delete {
+		@include media-breakpoint-down(md) {
+			width: 20%;
+			order: -1;
+		}
+	}
+
 	&__remove-btn {
 		background-color: transparent;
 		border: none;
