--- a/sourse/pug/blocks/sOrder/_sOrder.scss
+++ b/sourse/pug/blocks/sOrder/_sOrder.scss
@@ -85,6 +85,7 @@ body .bx-sls .bx-ui-sls-container {
 	padding: rem(10);
 	width: 80%;
 	border: 1px solid #ddd;
+  outline: none;
 }
 .req {
 	color: #ff3300;
@@ -143,6 +144,9 @@ body .bx-sls .bx-ui-sls-container {
 }
 .orderPage_main_block_itemItem .bx-sls {
 	width: 100%;
+  .dropdown-field {
+    border: none;
+  }
 }
 .bx-sls .dropdown-block {
 	border: 1px solid #bdbdbd;
