--- a/sourse/pug/blocks/sBlog/_sBlog.pug
+++ b/sourse/pug/blocks/sBlog/_sBlog.pug
@@ -4,29 +4,29 @@ mixin sBlog(data)
 		.container
 			+breadcrumb('Главная', 'Статьи')
 			.row
-				.col-sm-6.col-md-4.col-lg-2
+				.col-6.col-md-4.col-xl-2
 					+blogItem('2','', 'Как выбрать тепловую пушку: классификация, характеристики, популярные модели','09.02.2022')
-				.col-sm-6.col-md-4.col-lg-2
+				.col-6.col-md-4.col-xl-2
 					+blogItem('3','', 'Самый проходимый снегоход в глубоком снегу','30.11.2021')
-				.col-sm-6.col-md-4.col-lg-2
+				.col-6.col-md-4.col-xl-2
 					+blogItem('4','', 'Профессиональная бензопила для валки леса: рейтинг лучших','17.09.2021')
-				.col-sm-6.col-md-4.col-lg-2
+				.col-6.col-md-4.col-xl-2
 					+blogItem('5','', 'Ретинг бензиновых измельчителей веток','09.02.2022')
-				.col-sm-6.col-md-4.col-lg-2
+				.col-6.col-md-4.col-xl-2
 					+blogItem('2','', 'Как выбрать тепловую пушку: классификация, характеристики, популярные модели','09.02.2022')
-				.col-sm-6.col-md-4.col-lg-2
+				.col-6.col-md-4.col-xl-2
 					+blogItem('3','', 'Самый проходимый снегоход в глубоком снегу','30.11.2021')
-				.col-sm-6.col-md-4.col-lg-2
+				.col-6.col-md-4.col-xl-2
 					+blogItem('4','', 'Профессиональная бензопила для валки леса: рейтинг лучших','17.09.2021')
-				.col-sm-6.col-md-4.col-lg-2
+				.col-6.col-md-4.col-xl-2
 					+blogItem('5','', 'Ретинг бензиновых измельчителей веток','09.02.2022')
-				.col-sm-6.col-md-4.col-lg-2
+				.col-6.col-md-4.col-xl-2
 					+blogItem('2','', 'Как выбрать тепловую пушку: классификация, характеристики, популярные модели','09.02.2022')
-				.col-sm-6.col-md-4.col-lg-2
+				.col-6.col-md-4.col-xl-2
 					+blogItem('3','', 'Самый проходимый снегоход в глубоком снегу','30.11.2021')
-				.col-sm-6.col-md-4.col-lg-2
+				.col-6.col-md-4.col-xl-2
 					+blogItem('4','', 'Профессиональная бензопила для валки леса: рейтинг лучших','17.09.2021')
-				.col-sm-6.col-md-4.col-lg-2
+				.col-6.col-md-4.col-xl-2
 					+blogItem('5','', 'Ретинг бензиновых измельчителей веток','09.02.2022')
 			button Показать еще
 	// end sBlog
