--- a/sourse/pug/blocks/sBlog/_sBlog.scss
+++ b/sourse/pug/blocks/sBlog/_sBlog.scss
@@ -11,7 +11,6 @@
 		--bs-gutter-y: #{$grid-gutter-width};	
 	}
 	.blog-item {
-		height: 400px;
 		@include mt;
 		// @media (max-width: 576px) {
 		// 	width: 50%;
@@ -32,7 +31,11 @@
 			background-color: #e6e6e6;
 		}
 	}
-
+	.col-6 {
+		@media (max-width: 440px) {
+			width: 100%;
+		}
+	}
 	@include media-breakpoint-up(xl) {}
 	@include media-breakpoint-up(lg) {}
 	@include media-breakpoint-up(md) {}
