--- a/sourse/pug/blocks/sBlogSlider/_sBlogSlider.scss
+++ b/sourse/pug/blocks/sBlogSlider/_sBlogSlider.scss
@@ -9,6 +9,10 @@
 	.sliderAutoWidt {
 		margin: -10px;
 	}
+	.swiper {
+		margin: 0 -10px;
+		padding: 0 10px;
+	}
 	.swiper-wrapper {
 		padding: 10px;
 		margin-left: -10px;
